--- a/style.css
+++ b/style.css
@@ -18,19 +18,19 @@ body {
 header {
   background-color: rgb(27, 55, 73);
   width: 100%;
-  /* position: fixed; */
+  position: relative; 
   z-index: 999;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 200px;
 }
-/* .logo {
-  font-size: small;
-} */
+ .logo img{
+  height: 90px;
+} 
 section {
-  padding: 50px 600px;
-}
+  padding: 110px ;
+} 
 .navigation h2{
   color: #ffffff;  
   font-size: 1.4em; 
@@ -51,7 +51,7 @@ section {
   color: rgb(255, 255, 255);
   font-size: 2.2em;
   font-weight: 800;
-  margin-bottom: 30px; 
+  margin-bottom: 0px; 
 }
 .cards {
   width: 100%;
@@ -70,8 +70,8 @@ section {
   width: 25em;
   box-shadow: 0 5px 25px rgba(1 1 1 / 15%);
   border-radius: 25px 25px 0 25px;
-  padding: 10px;
-  margin: 25px;
+  padding: 10px ;
+  margin: 18px;
   transition: 0.7s ease;
   img{
     width: clamp(380px, 40vw, 150px);
@@ -85,7 +85,6 @@ section {
   transform: scale(1.1);
 }
 .img {
-  /* color: #ffffff; */
   font-size: 1em;
   text-align: center;
 }
@@ -119,115 +118,43 @@ section {
 .footer {
   background-color: rgb(27, 55, 73);
   color: #ffffff;
-  padding: 15px 15px;
+  padding: 15px 20px;
   display: flex;
   justify-content: space-between;
   position: relative;
   text-align: center;
   font-size: 14px;
 }
-.container {
-  position: relative;
-  width: 700px;
-  text-align: center;
-  color: #ffffff;
+.single-footer h4 {
+text-transform: capitalize;
+font-size: 15px;
 }
-.social-icons a {
-  position: relative;
+.footer-social a {
   color: #ffffff;
-  font-size: 1.7em;
-  padding-right: 30px;
-  border-radius: 50%;
   width: 30px;
   height: 30px;
+  display: inline-block;
+  text-align: left;
+  margin-right: 10px;
 }
-/* .card-link {
-  color: rgb(27, 55, 73);
-  font-size: 1.2em;
-  font-weight: 700;
-  margin: 10px;
-} */ 
-
-
-/* body {
-  min-height: 100vh;
-  min-height: 100svh;
-  background: rgb(7, 7, 7);
-  font-family: "Cairo", sans-serif;
+.footer-social {
+  margin-top: 20px;
+}
+.single-footer ul{
+  list-style: none;
+}
+.single-footer ul li{
+  margin-bottom: 10px;
   position: relative;
-  overflow-x: hidden;
+  padding-left: 20px;
 }
-
-img {
-  border-radius: 50%;
-  width: clamp(100px, 40vw, 120px);
-  height: clamp(100px, 40vw, 120px);
-  object-fit: cover;
-  object-position: top;
+.single-footer ul li a{
+  color: #ffffff;
+  text-transform: capitalize;
+  text-decoration: none;
 }
-
-.circle-top {
-  width: clamp(25rem, 30vw, 31.25rem);
-  position: absolute;
-  top: 3em;
-  left: -8em;
-  height: clamp(25rem, 30vw, 31.25rem);
-  background: hsla(211, 100%, 28%, 1);
-
-  background: radial-gradient(circle, #00458f8f 0%, #00458e00 60%, #ffffff00 100%);
-
-  background: -moz-radial-gradient(circle, #00458f8f 0%, #00458e00 60%, #ffffff00 100%);
-
-  background: -webkit-radial-radial-gradient(circle, #00458f8f 0%, #00458e00 60%, #ffffff00 100%);
-
-  border-radius: 50%;
+.single-footer ul li a i{
+position: absolute;
+  left: 0;
+  top: 5px;
 }
-.circle-bottom {
-  width: clamp(25rem, 30vw, 31.25rem);
-  position: absolute;
-  bottom: -5em;
-  right: -8em;
-  height: clamp(25rem, 30vw, 31.25rem);
-  background: hsla(211, 100%, 28%, 1);
-
-  background: radial-gradient(circle, #00458f8f 0%, #00458e00 65%, #ffffff00 100%);
-
-  background: -moz-radial-gradient(circle, #00458f8f 0%, #00458e00 65%, #ffffff00 100%);
-
-  background: -webkit-radial-radial-gradient(circle, #00458f8f 0%, #00458e00 65%, #ffffff00 100%);
-
-  border-radius: 50%;
-}
-
-header {
-  background: linear-gradient(to top, #1f2c3a 0%, #2f3c4742 100%),
-    url("https://static.srpcdigital.com/styles/1037xauto/public/2015/03/08/01-empire-diamonds-towers.jpg")
-      no-repeat 50% 50% / cover;
-  width: 100%;
-  min-height: 40em;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  color: #fff;
-
-  .header-content {
-    width: min(37.5em, 90%);
-    margin-top: 5em;
-    position: relative;
-    z-index: 10;
-
-    span {
-      display: inline-block;
-      text-transform: uppercase;
-      letter-spacing: 0.063rem;
-      font-size: clamp(0.8rem, 0.7625rem + 0.1875vw, 0.95rem);
-    }
-
-    h1 {
-      font-size: clamp(1.5rem, 1.375rem + 0.625vw, 2rem);
-      font-weight: 700;
-    }
-  }
-} */
