--- a/style.css
+++ b/style.css
@@ -74,8 +74,8 @@ section {
   margin: 18px;
   transition: 0.7s ease;
   img{
-    width: clamp(380px, 40vw, 150px);
-    height: clamp(200px, 40vw, 200px);
+    width: 100%;
+    height: 100%;
     position: relative;
     border-radius: 20px 20px 0 25px;
 
