--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ section {
 }
 .cards {
   width: 100%;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: flex; 
   align-items: center;
 }
@@ -121,7 +121,9 @@ section {
   padding: 15px 20px;
   display: flex;
   justify-content: space-between;
-  position: relative;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
   text-align: center;
   font-size: 14px;
 }
